<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginScreenController"
    android:background="@color/colorMainBackground">

    <android.support.v7.widget.Toolbar
        android:id="@+id/loginToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/ToolbarTitleStyle"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-39dp">

    </android.support.v7.widget.Toolbar>

    <EditText
        android:id="@+id/usernameInput"
        style="@style/LoginText"
        android:layout_width="225dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/usernameHint"
        android:autofillHints=""
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginToolbar" />

    <EditText
        android:id="@+id/passwordInput"
        style="@style/LoginText"
        android:layout_width="225dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput" />

    <Button
        android:id="@+id/loginButton"
        style="@style/NormalButton"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:text="@string/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginMessage" />

    <TextView
        android:id="@+id/loginMessage"
        style="@style/Message"
        android:layout_width="290dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <include layout="@layout/loading_screen" />

</android.support.constraint.ConstraintLayout>